--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
+__pycache__
+build_dist/
 build/
 dist/
 *.pyc
-
-## NOTE: These are ignored during development/testing with my exe creator
-_show_console_output.py
-requirements.txt
