WIP on getting package to build correctly. It ended up being a problem with how I constructed the test directories. It expected a structure like this: "1 - Name of Project (or any other name) __init__.py  (not needed) 2 - src __init__.py  (not needed) 3 - Name of Project. __init__.py (Necessary) .py files"

--- a/pyproject_template_example.toml
+++ b/pyproject_template_example.toml
@@ -43,4 +43,6 @@ testing = ["pytest>=3"]
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
-packages = {find = {where = ["."]}}
+# packages = {find = {where = ["."]}}
+# packages = {find = {where = ["."], include = ["*"]}}
+packages = {find = {where = ["src"]}}
