--- a/pyproject_template_example.toml
+++ b/pyproject_template_example.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pup_py"
 version = "0.1.0"
-authors = [{name = "Developer 1v", email = "Developer-1v@proton.me"}]
+authors = [{name = "developer-1v", email = "Developer-1v@proton.me"}]
 license = {text = "MIT License"}
 description = """Creates a package from a source and then automatically tests the package, uploads to PyPI, and installs to your PC"""
 keywords = [
@@ -43,6 +43,7 @@ testing = ["pytest>=3"]
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
-# packages = {find = {where = ["."]}}
-# packages = {find = {where = ["."], include = ["*"]}}
-packages = {find = {where = ["src"]}}
+# packages = ["."]
+packages = ['A_with_nothing']
+# packages = ["C:/.PythonProjects/SavedTests/_test_projects_for_building_packages/projects/A_with_nothing"]
+# packages = { find = { where = ["C:/.PythonProjects/SavedTests/_test_projects_for_building_packages/projects/A_with_nothing/"], include = ["*"] } }
