--- a/pyproject_template_example.toml
+++ b/pyproject_template_example.toml
@@ -43,7 +43,11 @@ testing = ["pytest>=3"]
 [tool.setuptools]
 zip-safe = false
 include-package-data = true
-# packages = ["."]
-packages = ['A_with_nothing']
+# packages = ['A_with_nothing']
+# packages = { find = { where = ["."] } }
+# packages = { find = { where = ["../A_with_nothing"] } }
+packages = { find = { where = [".."], include = ["A_with_nothing"] } }
 # packages = ["C:/.PythonProjects/SavedTests/_test_projects_for_building_packages/projects/A_with_nothing"]
 # packages = { find = { where = ["C:/.PythonProjects/SavedTests/_test_projects_for_building_packages/projects/A_with_nothing/"], include = ["*"] } }
+# packages = { find = { where = ["C:\\.PythonProjects\\SavedTests\\_test_projects_for_building_packages\\projects"], include = ["A_with_nothing"] } }
+# packages = { find = { where = ["."], include = ["*"] } }
